assets/openrov/css/mobile.scss
---
---
@import 'themeDefinitions.scss';

@media screen and (min-width: 768px) { 
  .modal:before {
    display: inline-block;
    vertical-align: middle;
    content: " ";
    height: 100%;
  }
}

@media (max-width: 770px) {
  .hideOnMobile {
    display: none!important;
  }
  .mobile-text-left {
      text-align: left!important;
  }
  .mobile-text-center {
      text-align: center!important;
  }
    .no-gutter-mobile [class*="-6"] {
        padding-left:0;
    }  
}


@media screen and (max-width: $mobileWidth) {
    .or-hero-title {
        font-size: 33px !important;
    }
    
    .or-hero-sub-title,
    .or-content-sub-title,
    .or-content-sub-title-dark {
        font-size: 12px!important;
    }

    .or-section-title-dark {
        font-size: 15px!important;
        font-weight: bold!important;
    }
    .or-content-title-light-left {
        font-size: 15px !important;
        font-weight: bold!important;
    }

    .Section-Title-LIT {
        font-size: 15px!important;
        font-weight: bold!important;
    }
    .or-hero-micro-title {
        font-size: 10px !important;
    }

    .or-content-body-dark {
        font-size: 10px !important;
    }

    .or-footer-micro-body {
        font-size: 10px !important;    
    }

    .element-tall-top {
        margin-top: 30px!important;
    }
    .element-tall-bottom {
        margin-bottom: 30px!important;
    }
    .element-medium-top {
        margin-top: 23px!important;
    }
    .element-medium-bottom,
    .mobule-element-medium-bottom {
        margin-bottom: 23px!important;
    }
    .element-short-top {
        margin-top: 9px !important;
    }
    .element-short-bottom, 
    .mobile-element-short-bottom {
        margin-bottom: 9px !important;
    }


    .or-button-blue {
        font-size: 12px !important;
        padding: 4px 20px !important;
    }

    #masthead {
        &.navbar {
            height: 43px;
            min-height: 43px;
        }
        &.navbar-scrolled {
            .navbar-brand {
                height: 43px;
                line-height: 43px;
            }
            .navbar-toggle {
                margin-top: 4px;
            }
        }

        .navbar-brand {
            height: 43px;
            line-height: 43px;
            img {
                height: 18px;
                width: auto;
                top: -3px;
            }
        }

        .navbar-toggle {
            margin-top: 4px;
            margin-bottom: 4px;
        }
    }
}


// ------------ MODAL -----------------
@media screen and (max-width: $mobileWidth) {
.modal {
    .modal-dialog {
        margin: 0;
        margin-top: auto;
        margin-bottom: auto;
        padding: 0;
        top: 0;
        left: 0;
        right: 0;
        bottom: 0;
        height: 100%;
        width: 100%;

        .content {
            padding: 0;
            .v-box {
                margin-left: 10px;
                margin-right: 10px;
                text-align: center;
            }
        }

        .close {
            font-size: 2.5em;
        }

        .usecase-arrow {
            top: 90%;
        }

        .modal-content {
            height: 100%;
            width: 100%;
        }
        .modal-body {
            height: 100%;
            width: 100%;
            position: relative;

            .head {
                .icon {
                    float: none;
                    width: 100%;
                    text-align: center;
                    margin-bottom: 15px;
                }

                h1 {
                    font-size: 25px!important;
                    text-align: center;
                    margin-bottom: 15px;
                }
            }

            .description {
                font-size: 15px;
                text-align: left;
            }

        }

    }
}
}


// ------------ PRE-ORDER SASH --------
@media screen and (max-width: $mobileWidth) {
div#pre-order-banner.pre-order-banner {
    top: 43px;
    &.sticky {
        height: 50px;
        top: 43px;
    }
    
    h1 {
        font-size: 33px;
    }

    .button-container {
        line-height: 50px !important;
        .btn {
            font-size: 12px !important;
            font-weight: bold !important;
            line-height: 0;
            margin-top: -5px !important;
        }
    }
}
}
 
// ---------------- linkImage ---------
@media screen and (max-width: $mobileWidth) {
.linkImage {
    .linkImage-content {
        height: 77px !important; 
        .description {
            font-size: 14px;
        }
    }
}    
}

// ---------------- pre-order button ---------
@media screen and (max-width: $mobileWidth) {
    .or-hero-btn-pre-order {
        font-size: 11px !important;
        padding: 11px 20px !important;
    }
}

// ---------------- HOME --------------
@media screen and (max-width: $mobileWidth) {
article#home {

    section#head {
        .flexslider {

            height: 435px;
            @include header-height();

            .hero {
                .title {
                    margin-top: 10px;
                }
                .title > h1 > img {
                    height: 40px;
                    margin-left: auto;
                    margin-right: auto;
                }
                .buttons {
                    &.pull-right {
                        float:none!important;
                    }
                    margin-top: 115px;
                }
            }        
        }
    }

    .media-links .element-short-bottom {
        margin-bottom: 10px !important;
    }


    section#usecases {
        .usecase > div {
            height: 140px;
        }
        .usecase-text {
            margin-top: 10px;
        }
        .description {
            font-size: 10px;
        }
        .usecase .background .usecase-content {
            height: 70px;
            padding-left: 14px;
            padding-right: 14px;

            .row.full-height {
                // height: initial;
            }

            .svg-container {
                margin-bottom: 5px;
                height: 76px;
            }
        }
    }

    section#tridentSpecs {
        .background-media {
            background-position-x: 20%;
        }
        .description {
            font-size: 10px !important;
        }
    }

    section#tridentFeatures {
        .description {
            font-size: 10px !important;
        }
    }

    section#openexplorer {
        .oe-content {
            height: 280px;
            padding-top: 1px;
            header {
                margin-top: 23px !important;
                margin-bottom: 10px !important;
                h1 {
                    margin-top: 20px !important;
                    margin-bottom: 20px !important;
                }
                img {
                    height: 18px;
                    width: auto;
                }
            }
        }
        .background-media {
            background-image: url('../images/hero/b-g-explore-small.jpg');
            background-size: cover;
        }
    }

    section#product {
        .linkImage {
            .background {
                height: 260px;
            }
        }
    }
}
}

// ------------ Product --------
@media screen and (max-width: $mobileWidth) {
    section#promotions {
        .jumbotron {
            height: 500px;
            @include header-height();

            .btn {
                font-size: 11px;
                padding: 11px 20px !important;
            }
        }
        .description {
            font-size: 14px !important;
        }
        
    }

    section#products {
        .linkImage {
            .background {
                height: 230px!important;
            }
        }
    }

    .jumbotron {
        &> div.content {
            margin-left: 0 !important;
        }

    }

    section#promotions .jumbotron h1{
        &.or-hero-title {
            font-size: 33px!important;
        }
        img {
            height: 40px!important;
            margin-left: auto!important;
            margin-right: auto!important; 
        }
    }

    section#components {

        .linkImage {

            .background {
                height: 150px !important;
            }
            .linkImage-content {
                height: 101px !important;
            }
        }

    }    

}


// ------------ Product Trident --------
@media screen and (max-width: $mobileWidth) {
    article#trident {
        .jumbotron {
            &> div.content {
                margin-left: 0 !important;
            }

        }

        section#head .jumbotron {
            height: 500px;
            @include header-height();
            background-position-x: 66%;
            h1{
                &.or-hero-title {
                    font-size: 33px!important;
                }
            }

            .description {
                font-size: 14px !important;
            }

            .hero .buttons {
                margin-top: 15px!important;
                &.pull-right {
                    float: none!important;
                }
            }

        }

        .linkImage .background .linkImage-content {
            height: 180px;
        }

        section#content {
            #wifi {
                width: 90%;
                height: auto;
            }
        }
    }
}

// ------------ Product Trident Spec --------
@media screen and (max-width: $mobileWidth) {
    article#trident-specification {
        .jumbotron {
            height: 500px;
            @include header-height();

            &> div.content {
                margin-left: 0 !important;
            }

        }

        section#content .row > .col-md-6 {
            width: 100%;
        }

        section#head .jumbotron {
            background-position-x: 66%;
            h1{
                &.or-hero-title {
                    font-size: 33px!important;
                }
            }

            .hero .buttons {
                margin-top: 15px!important;
                &.pull-right {
                    float: none!important;
                }
            }

        }
    }
}

// ------------ Product 2-8 --------
@media screen and (max-width: $mobileWidth) {
    section#head-2-8 {
        .jumbotron {
            height: 500px;
            @include header-height();

        }
    }
}

// ------------ support  --------
@media screen and (max-width: $mobileWidth) {
    #modal-contactSupport {
        section.section {
            top: 0;
            left: 0;
            right: 0;
            bottom: 0;
            position: absolute;
        }
    }
}

// ------------ PRESS  --------
@media screen and (max-width: $mobileWidth) {
    section#press {
        .press-kit.pull-right {
            float: none!important;
        }
    }
}

// ------------ FOOTER --------
@media screen and (max-width: $mobileWidth) {
footer#footer {
    section.main-footer {
        height: 20em;

        &>.container > .row {
            margin-top: 20px!important;

            &> div {
                margin-top: 10px;
            }
        }
        .link-partners {
            .social {
                margin-top: 5px !important;
                a {
                    margin-right: 14px;
                }
            }
            .fa {
                font-size: 32px;
            }
        }
    }

    section.bottom {
        text-align: center;
        .pull-right {
            float:none!important;
        }
        .row {
            margin-top: 18px !important;
        }
    }
}
}

